--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vite App</title>
-    <script type="module" crossorigin src="index-2E5AyZfP.js"></script>
-    <link rel="stylesheet" crossorigin href="index-CIYfGGpb.css">
+    <script src="index-2E5AyZfP.js"></script>
+    <link rel="stylesheet" href="index-CIYfGGpb.css">
   </head>
   <body>
     <div id="app"></div>
